--- a/Task1_InigoLara.ipynb
+++ b/Task1_InigoLara.ipynb
@@ -4,14 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Task 1: Quantum Approximation Optimization Algorithms"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "__Iñigo Lara__"
+    "# Task 1: Quantum Approximation Optimization Algorithms - Iñigo Lara"
    ]
   },
   {
@@ -91,13 +84,13 @@
    "outputs": [],
    "source": [
     "def Even(thetaEven):\n",
-    "    \"\"\" Applies a set of RZ(theta) to all the qubits\"\"\"\n",
+    "    \"\"\" Applies a set of RZ(theta) to all the qubits \"\"\"\n",
     "    for wire in range(n_wires):\n",
     "        qml.RX(thetaEven[wire], wires=wire)\n",
     "\n",
     "\n",
     "def Odd(thetaOdd):\n",
-    "    \"\"\" Applies a set of RZ(theta) followed by CZ entanglement between every pair of qubits\"\"\"\n",
+    "    \"\"\" Applies a set of RZ(theta) followed by CZ entanglement between every pair of qubits \"\"\"\n",
     "    for wire in range(n_wires):\n",
     "        qml.RZ(thetaOdd[wire], wires=wire)\n",
     "        for i in range(n_wires):\n",
@@ -262,7 +255,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "layer_list = [1]"
+    "layer_list = [1, 3, 5, 7]"
    ]
   },
   {
@@ -364,7 +357,7 @@
     "plt.plot(x, final_losses, '--')\n",
     "plt.plot(x, final_losses, 'ro')\n",
     "plt.xlabel('Layers')\n",
-    "plt.ylabel('Loss')\n",
+    "plt.ylabel('Loss (1-F)')\n",
     "plt.legend(['Loss'])\n",
     "plt.title('Final loss VS number of layers')\n",
     "plt.show()"
@@ -396,10 +389,37 @@
     "    plt.plot(x2, i)\n",
     "legendList = ['{} Layers'.format(i + 1) for i in range(10)]\n",
     "plt.xlabel('Optimization iterations')\n",
-    "plt.ylabel('Loss')\n",
+    "plt.ylabel('Loss (1-F)')\n",
     "plt.legend(legendList)\n",
     "plt.title('Loss VS optimization iterations')\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Conclusion:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "It is interesting to note that even the small architectures show a rapid decrease. They then stop at around $F\\sim 0.9$. Deeper architectures go beyond that point.\n",
+    "\n",
+    "Naively, I would expect that circuits with more layers would perform better. However, this is not really explicit from the experiments run above. It is true that bigger circuits do better, but not as much as I would expect.\n",
+    "\n",
+    "This fact could have many origins. I can think of some of them:\n",
+    "\n",
+    "It may happen that the Fidelity measure gets stuck in local minima easily, as it has a phase redundancy. This could be avoided, for example, taking into account the symmetries of the system and limiting the values of $\\theta$ to $[0, 2\\pi]$.\n",
+    "\n",
+    "It can also happen even bigger architectures are not capable of covering properly Hilbert's space. This could be the case, as $10*8=80$ parameters (degrees of freedom) that we have in the biggest case is small compared to the $16*16\\sim 256$ degrees of freedom of unitary matrix ($n^{2}-1$).\n",
+    "\n",
+    "\n",
+    "**Anyway...**\n",
+    "\n",
+    "It has been an interesting task with many subtleties to explore. I would have liked to build, with more time, noise models to test the circuits with, in order to model deocherence. Moreover, it would have been interesting to run the experiments in an actual quantum computer. Luckily, we will be able to do that in not that much time!"
    ]
   },
   {
