Final version - typos checked

--- a/Task1_InigoLara.ipynb
+++ b/Task1_InigoLara.ipynb
@@ -255,7 +255,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "layer_list = [1, 3, 5, 7]"
+    "layer_list = [1, 3, 5, 7, 9]"
    ]
   },
   {
